--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,22 @@
         </nav>
         <!-- contacts list -->
         <ul class="list contacts-list">
-            <li class="contacts-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li class="contacts-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li class="contacts-item">
+                <a href="mailto:info@devstudio.com" class="link">
+                    <svg class="link-icon" width="16" height="12">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                </a>
+            </li>
+            <li class="contacts-item">
+                <a href="tel:+380961111111" class="link">
+                    <svg class="link-icon" width="10" height="16">
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11
+                </a>
+            </li>
         </ul>
     </div>
 </header>
@@ -54,67 +68,85 @@
                 <!-- Portfolio set -->
                 <ul class="list portfolio-set">
                     <li class="portfolio-card">
-                        <img src="./images/technoquack.jpg" alt="Веб-сайт" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 class="portfolio-title">Технокряк</h2>
-                            <p class="portfolio-text">Веб-сайт</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/technoquack.jpg" alt="Веб-сайт" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 class="portfolio-title">Технокряк</h2>
+                                <p class="portfolio-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-card">
-                        <img src="./images/basketballplayers.jpg" alt="Два баскетболиста" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 class="portfolio-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
-                            <p class="portfolio-text">Дизайн</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/basketballplayers.jpg" alt="Два баскетболиста" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 class="portfolio-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+                                <p class="portfolio-text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-card">
-                        <img src="./images/restaurant.jpg" alt="Логотип ресторана" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
-                            <p class="portfolio-text">Приложение</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/restaurant.jpg" alt="Логотип ресторана" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
+                                <p class="portfolio-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-card">
-                        <img src="./images/headphones.jpg" alt="Наушники" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
-                            <p class="portfolio-text">Маркетинг</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/headphones.jpg" alt="Наушники" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
+                                <p class="portfolio-text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-card">
-                        <img src="./images/boxes.jpg" alt="Две картонных коробки" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
-                            <p class="portfolio-text">Приложение</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/boxes.jpg" alt="Две картонных коробки" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
+                                <p class="portfolio-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-card">
-                        <img src="./images/monitor.jpg" alt="Монитор" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
-                            <p class="portfolio-text">Веб-сайт</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/monitor.jpg" alt="Монитор" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
+                                <p class="portfolio-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-card">
-                        <img src="./images/magazine.jpg" alt="Журнал" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
-                            <p class="portfolio-text">Дизайн</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/magazine.jpg" alt="Журнал" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
+                                <p class="portfolio-text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-card">
-                        <img src="./images/tag.jpg" alt="Бирка проекта" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
-                            <p class="portfolio-text">Маркетинг</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/tag.jpg" alt="Бирка проекта" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
+                                <p class="portfolio-text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-card">
-                        <img src="./images/worker.jpg" alt="Работа за ноутбуком" width="370" class="image">
-                        <div class="portfolio-card-content">
-                            <h2 lang="en" class="portfolio-title">Growing Business</h2>
-                            <p class="portfolio-text">Приложение</p>
-                        </div>
+                        <a href="" class="card-link">
+                            <img src="./images/worker.jpg" alt="Работа за ноутбуком" width="370" class="image">
+                            <div class="portfolio-card-content">
+                                <h2 lang="en" class="portfolio-title">Growing Business</h2>
+                                <p class="portfolio-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
            </div>
@@ -124,20 +156,65 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <!-- logo -->
-            <a href="./index.html" lang="en" class="link logo-link">Web<span class="logo-footer">Studio</span></a>
-            <!-- contacts -->
-            <address id="contacts" class="contacts">
+            <div class="address">
+                <!-- logo -->
+                <a href="./index.html" lang="en" class="link logo-link">Web<span class="logo-footer">Studio</span></a>
+                <!-- contacts -->
+                <address id="contacts" class="contacts">
+                    <ul class="list">
+                        <li class="footer-item"><a href="https://goo.gl/maps/YFTjMEW9eGdTmHT36" target="_blank"
+                                rel="noreferrer noopener nofollow" class="link address-link">г. Киев, пр-т Леси Украинки,
+                                26</a></li>
+                        <li class="footer-item"><a href="mailto:info@devstudio.com"
+                                class="link mail-tel-link">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-item"><a href="tel:+380961111111" class="link mail-tel-link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <!-- Social links -->
+            <div class="social-links">
+                <p class="social-links-text">присоединяйтесь</p>
                 <ul class="list">
-                    <li class="footer-item"><a href="https://goo.gl/maps/YFTjMEW9eGdTmHT36" target="_blank"
-                            rel="noreferrer noopener nofollow" class="link address-link">г. Киев, пр-т Леси Украинки, 26</a>
+                    <li class="social-links-item">
+                        <a href="https://www.instagram.com" target="_blank" rel="noreferrer noopener nofollow"
+                            aria-label="Инстаграм" class="social-link">
+                            <svg class="social-link-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                            <span class="visually-hidden">Инстаграм</span>
+                        </a>
                     </li>
-                    <li class="footer-item"><a href="mailto:info@devstudio.com"
-                            class="link mail-tel-link">info@devstudio.com</a></li>
-                    <li class="footer-item"><a href="tel:+380961111111" class="link mail-tel-link">+38 096 111 11 11</a>
+                    <li class="social-links-item">
+                        <a href="https://twitter.com" target="_blank" rel="noreferrer noopener nofollow"
+                            aria-label="Твиттер" class="social-link">
+                            <svg class="social-link-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                            <span class="visually-hidden">Твиттер</span>
+                        </a>
+                    </li>
+                    <li class="social-links-item">
+                        <a href="https://uk-ua.facebook.com" target="_blank" rel="noreferrer noopener nofollow"
+                            aria-label="Фейсбук" class="social-link">
+                            <svg class="social-link-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                            <span class="visually-hidden">Фейсбук</span>
+                        </a>
+                    </li>
+                    <li class="social-links-item">
+                        <a href="https://ua.linkedin.com/" target="_blank" rel="noreferrer noopener nofollow"
+                            aria-label="Линкедин" class="social-link">
+                            <svg class="social-link-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                            <span class="visually-hidden">Линкедин</span>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
